--- a/src/pages/about/About.sass
+++ b/src/pages/about/About.sass
@@ -32,7 +32,7 @@ body
 .about .collapse-child
     background-color: #F6F6F6
     width: 85%
-    padding: 5px
+    padding: 3px
     margin: 0
 
 .chevron-down
